--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.16.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
-    "framer-motion": "^12.5.0",
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.7.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.14"
